import React from 'react';
jest.mock('react', () => ({
  ...jest.requireActual('react'),
  useLayoutEffect: jest.requireActual('react').useEffect
}));

import {
  fetchImplementation,
  mounter,
  reduxer,
  serialize,
  snapshotter,
  state
} from '../bootstrap';
import { unmountComponentAtNode } from 'react-dom';

import {
  act,
  fireEvent,
  prettyDOM,
  render,
  screen,
  waitFor
} from '@testing-library/react';
import userEvent from '@testing-library/user-event';

import * as tlr from '@testing-library/react';

import { SET_FILTER_SCENARIOS_IN_USE } from '../../actions/types';
import * as filtersActions from '../../actions/filters';
jest.mock('../../actions/filters');

import * as QueryString from 'query-string';
jest.mock('query-string');

const s1 = {
  id: 1,
  title: 'Foo',
  description: 'A scenario about Foo!',
  status: 2,
  deleted_at: null,
  updated_at: '2020-12-10T17:50:19.074Z'
};
const s2 = {
  id: 2,
  title: 'Bar',
  description: 'A scenario about Bar!',
  status: 2,
  deleted_at: null,
  updated_at: '2020-12-10T17:50:19.074Z'
};
const s3 = {
  id: 3,
  title: 'Baz',
  description: 'A scenario about Baz!',
  status: 2,
  deleted_at: null,
  updated_at: '2020-12-10T17:50:19.074Z'
};

let cohort;
let scenarios;
let scenariosById;
let scenariosInUse;

import CohortScenarioLabels from '../../components/Cohorts/CohortScenarioLabels.jsx';

const original = JSON.parse(JSON.stringify(state));
let container = null;
let commonProps = null;
let commonState = null;

beforeAll(() => {
  (window || global).fetch = jest.fn();
});

afterAll(() => {
  jest.restoreAllMocks();
});

beforeEach(() => {
  jest.useFakeTimers();
  container = document.createElement('div');
  container.setAttribute('id', 'root');
  document.body.appendChild(container);

  fetchImplementation(fetch);

  cohort = {
    id: 1,
    created_at: '2020-08-31T14:01:08.656Z',
    name: 'A New Cohort That Exists Within Inline Props',
    is_archived: false,
    runs: [
      {
        id: 11,
        user_id: 333,
        scenario_id: 99,
        created_at: '2020-03-28T19:44:03.069Z',
        updated_at: '2020-03-31T17:01:43.139Z',
        ended_at: '2020-03-31T17:01:43.128Z',
        consent_id: 8,
        consent_acknowledged_by_user: true,
        consent_granted_by_user: true,
        referrer_params: null,
        cohort_id: 1,
        run_id: 11
      }
    ],
    scenarios: [99],
    users: [
      {
        username: 'super',
        personalname: 'Super User',
        email: 'super@email.com',
        id: 999,
        roles: ['participant', 'super_admin'],
        is_anonymous: false,
        is_super: true,
        progress: {
          completed: [1],
          latestByScenarioId: {
            1: {
              is_complete: true,
              event_id: 1909,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      {
        username: 'facilitator',
        personalname: 'Facilitator User',
        email: 'facilitator@email.com',
        id: 555,
        roles: ['participant', 'facilitator', 'researcher', 'owner'],
        is_anonymous: false,
        is_super: false,
        is_owner: true,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1905,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      {
        username: 'researcher',
        personalname: 'Researcher User',
        email: 'researcher@email.com',
        id: 444,
        roles: ['participant', 'researcher'],
        is_anonymous: false,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1904,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      {
        username: 'participant',
        personalname: 'Participant User',
        email: 'participant@email.com',
        id: 333,
        roles: ['participant'],
        is_anonymous: false,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1903,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      {
        username: 'anonymous',
        personalname: '',
        email: '',
        id: 222,
        roles: ['participant'],
        is_anonymous: true,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1902,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      }
    ],
    roles: ['super', 'facilitator'],
    usersById: {
      999: {
        username: 'super',
        personalname: 'Super User',
        email: 'super@email.com',
        id: 999,
        roles: ['participant', 'super_admin'],
        is_anonymous: false,
        is_super: true,
        progress: {
          completed: [1],
          latestByScenarioId: {
            1: {
              is_complete: true,
              event_id: 1909,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      555: {
        username: 'facilitator',
        personalname: 'Facilitator User',
        email: 'facilitator@email.com',
        id: 555,
        roles: ['participant', 'facilitator', 'researcher', 'owner'],
        is_anonymous: false,
        is_super: false,
        is_owner: true,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1905,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      444: {
        username: 'researcher',
        personalname: 'Researcher User',
        email: 'researcher@email.com',
        id: 444,
        roles: ['participant', 'researcher'],
        is_anonymous: false,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1904,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      333: {
        username: 'participant',
        personalname: 'Participant User',
        email: 'participant@email.com',
        id: 333,
        roles: ['participant'],
        is_anonymous: false,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1903,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      },
      222: {
        username: 'anonymous',
        personalname: '',
        email: '',
        id: 222,
        roles: ['participant'],
        is_anonymous: true,
        is_super: false,
        progress: {
          completed: [],
          latestByScenarioId: {
            1: {
              is_complete: false,
              scenario_id: 99,
              event_id: 1902,
              created_at: 1602454306144,
              name: 'slide-arrival',
              url: 'http://localhost:3000/cohort/1/run/99/slide/1'
            }
          }
        }
      }
    }
  };
  cohort.scenarios = [1, 2, 3];
  scenarios = [s1, s2, s3];
  scenariosById = scenarios.reduce((accum, record) => {
    accum[record.id] = record;
    return accum;
  }, {});

  scenariosInUse = [2];

  filtersActions.setFilterScenariosInUse = jest.fn();
  filtersActions.setFilterScenariosInUse.mockImplementation(
    scenariosInUse => async dispatch => {
      dispatch({ type: SET_FILTER_SCENARIOS_IN_USE, scenariosInUse });
      return scenariosInUse;
    }
  );

  delete window.location;
  // eslint-disable-next-line
  window.location = {
    search: ''
  };

  QueryString.parse.mockImplementation(() => {
    return {
      s: [1],
      search: ''
    };
  });

  commonProps = {};
  commonState = JSON.parse(JSON.stringify(original));
});

afterEach(() => {
  jest.runOnlyPendingTimers();
  jest.useRealTimers();
  jest.resetAllMocks();
  unmountComponentAtNode(container);
  container.remove();
  container = null;
  commonProps = null;
  commonState = null;
});

test('CohortScenarioLabels', () => {
  expect(CohortScenarioLabels).toBeDefined();
});

test('Render 1 1', async done => {
  const Component = CohortScenarioLabels;

  const props = {
    ...commonProps,
    cohort
  };

  const state = {
    ...commonState
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  done();
});

/* INJECTION STARTS HERE */

test('No scenarios in state', async done => {
  const Component = CohortScenarioLabels;

  const props = {
    ...commonProps,
    cohort
  };

  const filters = {
    scenariosInUse
  };

  const state = {
    ...commonState,
    filters,
    scenarios: [],
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  done();
});

test('Selected scenariosInUse', async done => {
  const Component = CohortScenarioLabels;

  const props = {
    ...commonProps,
    cohort
  };

  const filters = {
    scenariosInUse
  };

  const state = {
    ...commonState,
    filters,
    scenarios,
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  done();
});

test('No selected scenariosInUse, with unmatched search term', async done => {
  const Component = CohortScenarioLabels;

  QueryString.parse.mockImplementation(() => {
    return {
      s: [],
      search: 'z'
    };
  });

  const props = {
    ...commonProps,
    cohort
  };

  const filters = {
    scenariosInUse: []
  };

  const state = {
    ...commonState,
    filters,
    scenarios,
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  done();
});

test('No selected scenariosInUse, no search term', async done => {
  const Component = CohortScenarioLabels;

  QueryString.parse.mockImplementation(() => {
    return {
      s: [],
      search: ''
    };
  });

  const props = {
    ...commonProps,
    cohort
  };

  const filters = {
    scenariosInUse: []
  };

  const state = {
    ...commonState,
    filters,
    scenarios,
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  done();
});

test('Add and remove a filter', async done => {
  const Component = CohortScenarioLabels;

  const onChange = jest.fn();

  const props = {
    ...(commonProps || {}),
    cohort,
    onChange
  };

  const filters = {
    scenariosInUse
  };

  const state = {
    ...commonState,
    filters,
    scenarios,
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  const buttons = await screen.getAllByRole('button');
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[0]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[1]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[2]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[2]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[1]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[0]);
  expect(asFragment()).toMatchSnapshot();

  done();
});

test('Add and remove a filter, at a page, with a search term', async done => {
  const Component = CohortScenarioLabels;

  QueryString.parse.mockImplementation(() => {
    return {
      page: 1,
      s: [],
      search: 'Foo'
    };
  });

  const onChange = jest.fn();

  const props = {
    ...(commonProps || {}),
    cohort,
    onChange
  };

  const filters = {
    scenariosInUse
  };

  const state = {
    ...commonState,
    filters,
    scenarios,
    scenariosById
  };

  const ConnectedRoutedComponent = reduxer(Component, props, state);

  const { asFragment } = render(<ConnectedRoutedComponent {...props} />);
  expect(asFragment()).toMatchSnapshot();

  const buttons = await screen.getAllByRole('button');
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[0]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[1]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[2]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[2]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[1]);
  expect(asFragment()).toMatchSnapshot();

  userEvent.click(buttons[0]);
  expect(asFragment()).toMatchSnapshot();

  done();
});
